--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "_site"]
 	path = _site
-	url = git@github.com:afcapel/afcapel.github.com.git
+	url = git://github.com/afcapel/afcapel.github.com.git
